fixed scrolling bug

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <!--Footer-->
 
-    <footer class="footer">
+    <footer class="">
       <div class="container">
         <a href="https://github.com/priZ0nMike/boardGameReview2">GITHUB REPO</a>
       </div>
